# anki-mcp-server

./: .gitignore  LICENSE  README.md  VSCODE_SETUP.md  cline_mcp_settings.json  pyproject.toml  test-mcp.sh
.github/: copilot-instructions.md
.github/prompts/: import-json-to-anki.prompt.md
claude/: ALLINONE_GUIDE.md  CARD_TYPES_GUIDE.md  PROJEKT_ INSTRUCTIONS.md
export/: PGM__Homework1.apkg  PGM__Homework2.apkg  PGM__Homework3.apkg  PGM__Homework4.apkg  PGM__Homework5.apkg  PGM__MidtermExam.apkg
openspec/: project.md
openspec/changes/add-anki-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/add-anki-mcp-server/specs/anki-resources/: spec.md
openspec/changes/add-anki-mcp-server/specs/deck-management/: spec.md
openspec/changes/add-anki-mcp-server/specs/note-type-management/: spec.md
openspec/changes/archive/add-anki-mcp-server/: proposal.md  tasks.md
openspec/changes/archive/add-anki-mcp-server/specs/note-management/: spec.md
scripts/: convert_docling_to_structured.py
src/anki_mcp_server/: __init__.py  __main__.py  client.py  resources.py  server.py  server_fastmcp.py  tools.py
tests/: test_basic.py
